added some more details

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Directive by HTML5 UP</title>
+		<title>Portfolio of Steven Burrows</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -31,22 +31,25 @@
 					<section class="feature left">
 						<a href="#" class="image icon solid fa-signal"><img src="images/pic01.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The First Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Pill Tracker</h3>
+							<p>Written in Ruby and using Sinatra to complete the MVC model and using PostGreSQL as it's database. </p>
+							<p>This project was to allow someone to save pill details and then register when they took their pill so they wouldn't forget when they took them.</p>
+							
 						</div>
 					</section>
 					<section class="feature right">
 						<a href="#" class="image icon solid fa-code"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The Second Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Portfolio Tracker ShareWatch</h3>
+							<p>Using Node.js for a backend to a MongoDB and Vue.js for the front end </p>
+							<p>This project used a public API to look up stocks in the NYSE and then be able to register the purchase of the stock including the date and price </p>
 						</div>
 					</section>
 					<section class="feature left">
 						<a href="#" class="image icon solid fa-mobile-alt"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The Third Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Mobile Restaurant Booking System</h3>
+							<p>Using Java and React Native to create a mobile app that the staff can use to save repeat customers and book them into tables</p>
 						</div>
 					</section>
 				</div>
