--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<div id="header">
-				<span class="logo icon fa-paper-plane"></span>
+				<span class="logo icon fa-laptop-code"></span>
 				<h1>Welcome to my portfolio</h1>
 				<p> </p>
 			</div>
@@ -29,18 +30,34 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="#" class="image icon solid fa-signal"><img src="images/pic01.jpg" alt="" /></a>
+						<a href="#" class="image icon solid fa-pills"><img src="images/pic01.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Pill Tracker</h3>
+							<i class="devicon-ruby-plain-wordmark colored"></i>
+							<i class="devicon-postgresql-plain-wordmark colored"></i>
+							<i class="devicon-git-plain colored"></i>
+							<i class="devicon-github-plain-wordmark colored"></i>
+							<i class="devicon-html5-plain-wordmark colored"></i>
+							<i class="devicon-css3-plain colored"></i>
+							<i class="devicon-trello-plain colored"></i>
 							<p>Written in Ruby and using Sinatra to complete the MVC model and using PostGreSQL as it's database. </p>
 							<p>This project was to allow someone to save pill details and then register when they took their pill so they wouldn't forget when they took them.</p>
 							
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="#" class="image icon solid fa-code"><img src="images/pic02.jpg" alt="" /></a>
+						<a href="#" class="image icon solid fas fa-chart-line"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Portfolio Tracker ShareWatch</h3>
+							<i class="devicon-mongodb-plain-wordmark colored"></i>
+							<i class="devicon-javascript-plain colored"></i>
+							<i class="devicon-nodejs-plain colored"></i>
+							<i class="devicon-vuejs-plain-wordmark colored"></i>
+							<i class="devicon-git-plain colored"></i>
+							<i class="devicon-github-plain-wordmark colored"></i>
+							<i class="devicon-html5-plain-wordmark colored"></i>
+							<i class="devicon-css3-plain colored"></i>
+							<i class="devicon-trello-plain colored"></i>
 							<p>Using Node.js for a backend to a MongoDB and Vue.js for the front end </p>
 							<p>This project used a public API to look up stocks in the NYSE and then be able to register the purchase of the stock including the date and price </p>
 						</div>
@@ -49,6 +66,13 @@
 						<a href="#" class="image icon solid fa-mobile-alt"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Mobile Restaurant Booking System</h3>
+							<i class="devicon-java-plain colored"></i>
+							<i class="devicon-react-original colored"></i>
+							<i class="devicon-git-plain colored"></i>
+							<i class="devicon-github-plain-wordmark colored"></i>
+							<i class="devicon-html5-plain-wordmark colored"></i>
+							<i class="devicon-css3-plain colored"></i>
+							<i class="devicon-trello-plain colored"></i>
 							<p>Using Java and React Native to create a mobile app that the staff can use to save repeat customers and book them into tables</p>
 						</div>
 					</section>
@@ -198,11 +222,11 @@
 				-->
 
 				<footer class="major container medium">
-					<h3>Get shady with science</h3>
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
-					<ul class="actions special">
+					<h3>Like what you see?</h3>
+					<p>contact me through LinkedIn or see my other projects in my Github, see the links below</p>
+					<!-- <ul class="actions special">
 						<li><a href="#" class="button">Join our crew</a></li>
-					</ul>
+					</ul> -->
 				</footer>
 
 			</div>
@@ -211,7 +235,7 @@
 			<div id="footer">
 				<div class="container medium">
 
-					<header class="major last">
+					<!-- <header class="major last">
 						<h2>Questions or comments?</h2>
 					</header>
 
@@ -235,21 +259,13 @@
 								</ul>
 							</div>
 						</div>
-					</form>
+					</form> -->
 
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="https://www.linkedin.com/in/steven-j-burrows/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/stevenjburrows" class="icon brands fa-github"><span class="label">Github</span></a></li>
 					</ul>
 
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-
-				</div>
 			</div>
 
 		<!-- Scripts -->
