--- a/just_book.html
+++ b/just_book.html
@@ -16,16 +16,26 @@
 
 		<!-- Header -->
 			<div id="header">
-				<span class="logo icon fa-laptop-code"></span>
-				<h1>Welcome to my portfolio</h1>
-				<p> </p>
+				<nav>
+					<ul>
+						<li> <a href="./index.html" class="fa fa-home"> Home</a> </li>
+						<li><a href="./pill_tracker.html" class="fa fa-pills"> Pill tracker</a> </li>
+						<li><a href="./sharewatch.html" class="fa fa-chart-line"> ShareWatch</a> </li>
+						<li> <a href="./just_book.html" class="fa fa-mobile-alt"> Just Book</a> </li>
+						<li> <a href="#contact" class="fas fa-address-card"> Contact me</a> </li>
+					</ul>
+
+				</nav>
+				
+				<h1>Welcome to the portfolio</h1>
+				<p> of Steven Burrows</p>
 			</div>
 
 		<!-- Main -->
 			<div id="main">
 
 				<header class="major container medium">
-					<h2>A collection of some of my work</h2>
+					<h2>A collection of some of my projects</h2>
 				</header>
 
 				<div class="box alt container">
@@ -261,7 +271,9 @@
 						</div>
 					</form> -->
 
-					<ul class="icons">
+					<ul class="icons" id="contact">
+						<h2>Contact me through linkedin</h2>
+						<p>or just checkup my Github Repo below</p>
 						<li><a href="https://www.linkedin.com/in/steven-j-burrows/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/stevenjburrows" class="icon brands fa-github"><span class="label">Github</span></a></li>
 					</ul>
