finished the pill tracker page

--- a/pill_tracker.html
+++ b/pill_tracker.html
@@ -27,216 +27,67 @@
 
 				</nav>
 				
-				<h1>Welcome to the portfolio</h1>
-				<p> of Steven Burrows</p>
+				<h1>Pill Tracker Project</h1>
+				<p> by Steven Burrows</p>
 			</div>
 
 		<!-- Main -->
 			<div id="main">
 
 				<header class="major container medium">
-					<h2>A collection of some of my projects</h2>
+					<h2>The Brief</h2>
+					<p>Create a web app using only Ruby, Sinatra, PostGre, HTML and CSS  (no bootstrap allowed) to record when someone takes a pill.  So they have a record of it should they forget. </p>
+					<p> <a href="https://github.com/stevenjburrows/pill_tracking_app" class="devicon-github-plain-wordmark colored"> Link to my project on Github</a> <br />
+					<a href="https://pilltracker.herokuapp.com/" class="devicon-heroku-plain-wordmark"> Link to my project on Heroku</a> </p>
 				</header>
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="#" class="image icon solid fa-pills"><img src="images/pic01.jpg" alt="" /></a>
+						<img src="images/pill-main.png" alt="pill tracker home page"  class="image icon solid"/></a>
 						<div class="content">
-							<h3>Pill Tracker</h3>
-							<i class="devicon-ruby-plain-wordmark colored"></i>
-							<i class="devicon-postgresql-plain-wordmark colored"></i>
-							<i class="devicon-git-plain colored"></i>
-							<i class="devicon-github-plain-wordmark colored"></i>
-							<i class="devicon-html5-plain-wordmark colored"></i>
-							<i class="devicon-css3-plain colored"></i>
-							<i class="devicon-trello-plain colored"></i>
-							<p>Written in Ruby and using Sinatra to complete the MVC model and using PostGreSQL as it's database. </p>
-							<p>This project was to allow someone to save pill details and then register when they took their pill so they wouldn't forget when they took them.</p>
-							
+							<h3>The Why</h3>
+							<p>This was my first project while studying at Code Clan and we were asked to come up with a project of our own to bring together our newly taught skills in Ruby, Sinatra and PostGre in creating a CRUD app.  I had just under 1 week to complete this app and create a presentation on it.</p>
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="#" class="image icon solid fas fa-chart-line"><img src="images/pic02.jpg" alt="" /></a>
+						<img src="images/pill-pills.png" alt="pill tracker page showing available pills" class="image icon solid" /></a>
 						<div class="content">
-							<h3>Portfolio Tracker ShareWatch</h3>
-							<i class="devicon-mongodb-plain-wordmark colored"></i>
-							<i class="devicon-javascript-plain colored"></i>
-							<i class="devicon-nodejs-plain colored"></i>
-							<i class="devicon-vuejs-plain-wordmark colored"></i>
-							<i class="devicon-git-plain colored"></i>
-							<i class="devicon-github-plain-wordmark colored"></i>
-							<i class="devicon-html5-plain-wordmark colored"></i>
-							<i class="devicon-css3-plain colored"></i>
-							<i class="devicon-trello-plain colored"></i>
-							<p>Using Node.js for a backend to a MongoDB and Vue.js for the front end </p>
-							<p>This project used a public API to look up stocks in the NYSE and then be able to register the purchase of the stock including the date and price </p>
+							<h3>HTML & CSS</h3>
+							<p>While HTML and CSS were not part of the course I had to learn most of it as I went along and followed some online guides, YouTube videos and some trial and error until I found something I liked. </p>
+							<p>I used the same CSS code as a template for all the cards throughout the app</p>							
 						</div>
 					</section>
 					<section class="feature left">
-						<a href="#" class="image icon solid fa-mobile-alt"><img src="images/pic03.jpg" alt="" /></a>
+						<img src="images/pill-users.png" alt="pill tracker page showing current users" class="image icon solid" /></a>
 						<div class="content">
-							<h3>Mobile Restaurant Booking System</h3>
-							<i class="devicon-java-plain colored"></i>
-							<i class="devicon-react-original colored"></i>
-							<i class="devicon-git-plain colored"></i>
-							<i class="devicon-github-plain-wordmark colored"></i>
-							<i class="devicon-html5-plain-wordmark colored"></i>
-							<i class="devicon-css3-plain colored"></i>
-							<i class="devicon-trello-plain colored"></i>
-							<p>Using Java and React Native to create a mobile app that the staff can use to save repeat customers and book them into tables</p>
+							<h3>but why this?</h3>
+							<p>I know a few people that need to take pills regularly and all of them sometimes forget if they have taken a pill or when they took it.</p>
+							<p>The aim of the app was so that they could enter in the pills they took and then record when they took the pills.</p>
+						</div>
+					</section>
+					<section class="feature right">
+						<img src="images/pill-select.png" alt="pill tracker showing how to select a pill to take" class="image icon solid" /></a>
+						<div class="content">
+							<h3>Security</h3>
+							<p>Despite having multiple users the site has no login to protect the sensitive data from other users.  Any user can click and view someone else or change their details </p>
+							<p>Part of the brief I got was to miss this part out and just concentrate on the CRUD functionality instead</p>
+						</div>
+					</section>
+					<section class="feature left">
+						<img src="images/pill-record.png" alt="pill tracker page showing a record of the pills taken." class="image icon solid" /></a>
+						<div class="content">
+							<h3>Planning</h3>
+							<p>Before any code was even written I started to plan and draw out the SQL tables and how they would be joined.  Then I drew out the rest like a use case diagram and a site map </p>
+							<p>For this I used draw.io website and then saved them to my computer.</p>
 						</div>
 					</section>
 				</div>
 
-				<!--
-				<div class="box container">
-					<header>
-						<h2>A lot of generic stuff</h2>
-					</header>
-					<section>
-						<header>
-							<h3>Paragraph</h3>
-							<p>This is the subtitle for this particular heading</p>
-						</header>
-						<p>Phasellus nisl nisl, varius id <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque
-						habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi
-						leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit
-						amet risus elit.</p>
-					</section>
-					<section>
-						<header>
-							<h3>Blockquote</h3>
-						</header>
-						<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
-						tempus euismod. Vestibulum ante ipsum primis in faucibus.</blockquote>
-					</section>
-					<section>
-						<header>
-							<h3>Divider</h3>
-						</header>
-						<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
-						ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
-						facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-						tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-						posuere cubilia.</p>
-						<hr />
-						<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
-						ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
-						facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-						tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-						posuere cubilia.</p>
-					</section>
-					<section>
-						<header>
-							<h3>Unordered List</h3>
-						</header>
-						<ul class="default">
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-						</ul>
-					</section>
-					<section>
-						<header>
-							<h3>Ordered List</h3>
-						</header>
-						<ol class="default">
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-						</ol>
-					</section>
-					<section>
-						<header>
-							<h3>Table</h3>
-						</header>
-						<div class="table-wrapper">
-							<table class="default">
-								<thead>
-									<tr>
-										<th>ID</th>
-										<th>Name</th>
-										<th>Description</th>
-										<th>Price</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td>45815</td>
-										<td>Something</td>
-										<td>Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</td>
-										<td>29.99</td>
-									</tr>
-									<tr>
-										<td>24524</td>
-										<td>Nothing</td>
-										<td>Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</td>
-										<td>19.99</td>
-									</tr>
-									<tr>
-										<td>45815</td>
-										<td>Something</td>
-										<td>Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</td>
-										<td>29.99</td>
-									</tr>
-									<tr>
-										<td>24524</td>
-										<td>Nothing</td>
-										<td>Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</td>
-										<td>19.99</td>
-									</tr>
-								</tbody>
-								<tfoot>
-									<tr>
-										<td colspan="3"></td>
-										<td>100.00</td>
-									</tr>
-								</tfoot>
-							</table>
-						</div>
-					</section>
-					<section>
-						<header>
-							<h3>Form</h3>
-						</header>
-						<form method="post" action="#">
-							<div class="row">
-								<div class="col-6 col-12-mobilep">
-									<label for="name">Name</label>
-									<input class="text" type="text" name="name" id="name" value="" placeholder="John Doe" />
-								</div>
-								<div class="col-6 col-12-mobilep">
-									<label for="email">Email</label>
-									<input class="text" type="text" name="email" id="email" value="" placeholder="johndoe@domain.tld" />
-								</div>
-								<div class="col-12">
-									<label for="subject">Subject</label>
-									<input class="text" type="text" name="subject" id="subject" value="" placeholder="Enter your subject" />
-								</div>
-								<div class="col-12">
-									<label for="subject">Message</label>
-									<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
-								</div>
-								<div class="col-12">
-									<ul class="actions special">
-										<li><input type="submit" value="Send" /></li>
-										<li><input type="reset" value="Reset" class="alt" /></li>
-									</ul>
-								</div>
-							</div>
-						</form>
-					</section>
-				</div>
-				-->
 
 				<footer class="major container medium">
 					<h3>Like what you see?</h3>
+					<p>or even if you have any questions.</p>
 					<p>contact me through LinkedIn or see my other projects in my Github, see the links below</p>
-					<!-- <ul class="actions special">
-						<li><a href="#" class="button">Join our crew</a></li>
-					</ul> -->
 				</footer>
 
 			</div>
@@ -244,32 +95,6 @@
 		<!-- Footer -->
 			<div id="footer">
 				<div class="container medium">
-
-					<!-- <header class="major last">
-						<h2>Questions or comments?</h2>
-					</header>
-
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor
-					orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
-
-					<form method="post" action="#">
-						<div class="row">
-							<div class="col-6 col-12-mobilep">
-								<input type="text" name="name" placeholder="Name" />
-							</div>
-							<div class="col-6 col-12-mobilep">
-								<input type="email" name="email" placeholder="Email" />
-							</div>
-							<div class="col-12">
-								<textarea name="message" placeholder="Message" rows="6"></textarea>
-							</div>
-							<div class="col-12">
-								<ul class="actions special">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</div>
-						</div>
-					</form> -->
 
 					<ul class="icons" id="contact">
 						<h2>Contact me through linkedin</h2>
